syntax = "proto3";

package gaapicommon;
option csharp_namespace = "GAAPICommon";

message GenericResult {
	string ExceptionMessage = 1;
	string ExceptionSource = 2;
	string ExceptionStackTrace = 3;
	int32 ServiceCode = 4;
}